import java.nio.file.Files

plugins() {
	id('java')
}

group('builderb0y')
version('1.0-SNAPSHOT')

repositories() {
	mavenCentral()
}

ext() {
	junitVersion = '5.10.2'
}

sourceCompatibility = '24'
targetCompatibility = '24'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.compilerArgs.addAll([
		'-parameters',
		'--enable-preview',
		'--add-modules', 'jdk.incubator.vector',
		'--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
		'--add-exports', 'java.base/jdk.internal.classfile.components=ALL-UNNAMED'
	])
}

configurations() {
	implementation {
		canBeResolved = true
	}
}

dependencies() {
	implementation('org.controlsfx:controlsfx:11.2.1')
	implementation('net.synedra:validatorfx:0.5.0') {
		exclude(group: 'org.openjfx')
	}

	int jfxVersion = 21
	implementation("org.openjfx:javafx-base:${jfxVersion}")
	implementation("org.openjfx:javafx-controls:${jfxVersion}")
	implementation("org.openjfx:javafx-graphics:${jfxVersion}")
	implementation("org.openjfx:javafx-base:${jfxVersion}:linux")
	implementation("org.openjfx:javafx-controls:${jfxVersion}:linux")
	implementation("org.openjfx:javafx-graphics:${jfxVersion}:linux")

	testImplementation("org.junit.jupiter:junit-jupiter-api:${ junitVersion }")
	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${ junitVersion }")

	implementation('org.jetbrains:annotations:25.0.0')
}

File dependencies = file('dependencies')
dependencies.mkdir()
for (File from in getConfigurations().getByName('implementation').getResolvedConfiguration().getResolvedArtifacts().file) {
	String fileName = from.getName()
	File to = new File(dependencies, fileName)
	if (!to.exists()) Files.copy(from.toPath(), to.toPath())
}

test() {
	useJUnitPlatform()
}